# github-insights-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  db.py  deps.py  logging_config.py  main.py
app/github/: client.py  queries.py  utils.py
app/ingest/: coverage.py  service.py
app/insights/: confidence.py  grounding.py  llm.py  prompts.py  service.py
app/metrics/: cycle_time.py  review_load.py
app/models/: __init__.py  commit.py  insight_cache.py  pull_request.py  repository.py  review.py  sync_run.py  synced_range.py
app/routers/: health.py  insights.py  metrics.py  sync.py
app/schemas/: errors.py  insights.py  metrics.py  sync.py
evals/: cases.yaml  run.py
evals/fixtures/: balanced_load.json  empty_data.json  heavy_concentration.json  sparse_data.json
prompts/: insights_system_v1.md  insights_system_v2.md  insights_user_v1.md  insights_user_v2.md
tests/: conftest.py
tests/integration/: test_health.py  test_metrics_api.py  test_sync.py
tests/unit/: test_confidence.py  test_coverage.py  test_grounding.py  test_metrics.py
ui/: index.html
